# baseline-python

./: Makefile  README.md  baseline-python.code-workspace  build.spec  install.sh  new.py  pyproject.toml
.github/workflows/: release-on-version-bump.yml
src/: main.py
